HEAD
	+ Set the active tab using hash from the location browser
	+ Don't ask when a user modification is found by default
	+ Set HOME environment variable in EBox::init()
1.3.7
	+ Add support for permanent messages
1.3.6
	+ Change default logger and set default creation owner to ebox
	+ Bugfix: EBox::Sudo::root() not longer letfs behind a .cmd file
	after each call
1.3.5
	+ moved public.css and login.css to ebox package
	+ Support customFilter in models for big tables
1.3.4
	+ bugfix: EBox::Sudo::sudo wasn't working properly
	+ use ebox-dbus-check to test if we can actually connect to dbus
1.1.41
	+ bugfix: use encodeURIComponent to fetch data from fields using Ajax
1.1.30
	+ Menu entries are now grouped by functionality
	+ Fixed order of items in menu (no more 'random' order)
	+ Added missing netmask values for network addresses between 16 and 32
	+ Fixed regression with already used values in select types
1.1.20
	+ Support for custom view
	+ Fix in netwrappers: iface methofd now retuns the ifcaes sorted
1.1.10
	+ UI improvement: submit Ajax forms by pressing return
1.1
	+ Fixing bogus div and missing items to make eBox Web UI more w3c
	complaint
	+ Added generic JS graph class using flotr with mouse tracking and
	legend
	+ Added remote services link button
	+ Added support for `additionalParameters` to `EBox.TabMenu` JS
	prototype
	+ Added `configKeysFromFile` to `EBox::Config`
	+ Bugfix: make boolean setter honour editable attribute
	+ Change tableBody to fetch each row instead of all rows at the same time
	+ Place pager on the bottom-right corner of the table
	+ Bugfix: hide trailing text when there's a change on a union select
0.12.101
	+ Bugfix: Remove bogus mason tags
	+ Bugfix: Use 'window' as variable instead of 'Window' since it is
	more portable
0.12.100
	+ Remove bogus div end tag
	+ Fix items list for titles with single quotes
	+ Fix: precondition fail message is not showed when it does not exist
0.12.99
	+ Add new table view without actions